improv and fixes
